@@ -71,7 +71,7 @@ public abstract class JTextComponent extends JComponent
 //      implements AccessibleText, CaretListener, DocumentListener,
 //                 AccessibleAction, AccessibleEditableText
 //    {
-//    } // class AccessibleJTextComponent
+//    }
 
   /**
    * AccessibleJTextComponent
@@ -96,39 +96,39 @@ public abstract class JTextComponent extends JComponent
 
     /**
      * getCaretPosition
-     * @returns int
+     * @return int
      */
     public int getCaretPosition()
     {
       return 0; // TODO
-    } // getCaretPosition()
+    }
 
     /**
      * getSelectedText
-     * @returns String
+     * @return String
      */
     public String getSelectedText()
     {
       return null; // TODO
-    } // getSelectedText()
+    }
 
     /**
      * getSelectionStart
-     * @returns int
+     * @return int
      */
     public int getSelectionStart()
     {
       return 0; // TODO
-    } // getSelectionStart()
+    }
 
     /**
      * getSelectionEnd
-     * @returns int
+     * @return int
      */
     public int getSelectionEnd()
     {
       return 0; // TODO
-    } // getSelectionEnd()
+    }
 
     /**
      * caretUpdate
@@ -137,34 +137,34 @@ public abstract class JTextComponent extends JComponent
     public void caretUpdate(CaretEvent value0)
     {
       // TODO
-    } // caretUpdate()
+    }
 
     /**
      * getAccessibleStateSet
-     * @returns AccessibleStateSet
+     * @return AccessibleStateSet
      */
     public AccessibleStateSet getAccessibleStateSet()
     {
       return null; // TODO
-    } // getAccessibleStateSet()
+    }
 
     /**
      * getAccessibleRole
-     * @returns AccessibleRole
+     * @return AccessibleRole
      */
     public AccessibleRole getAccessibleRole()
     {
       return null; // TODO
-    } // getAccessibleRole()
+    }
 
     /**
      * getAccessibleText
-     * @returns AccessibleText
+     * @return AccessibleText
      */
     public AccessibleText getAccessibleText()
     {
       return null; // TODO
-    } // getAccessibleText()
+    }
 
     /**
      * insertUpdate
@@ -173,7 +173,7 @@ public abstract class JTextComponent extends JComponent
     public void insertUpdate(DocumentEvent value0)
     {
       // TODO
-    } // insertUpdate()
+    }
 
     /**
      * removeUpdate
@@ -182,7 +182,7 @@ public abstract class JTextComponent extends JComponent
     public void removeUpdate(DocumentEvent value0)
     {
       // TODO
-    } // removeUpdate()
+    }
 
     /**
      * changedUpdate
@@ -191,89 +191,89 @@ public abstract class JTextComponent extends JComponent
     public void changedUpdate(DocumentEvent value0)
     {
       // TODO
-    } // changedUpdate()
+    }
 
     /**
      * getIndexAtPoint
      * @param value0 TODO
-     * @returns int
+     * @return int
      */
     public int getIndexAtPoint(Point value0)
     {
       return 0; // TODO
-    } // getIndexAtPoint()
+    }
 
     /**
      * getRootEditorRect
-     * @returns Rectangle
+     * @return Rectangle
      */
     Rectangle getRootEditorRect()
     {
-      return null; // TODO
-    } // getRootEditorRect()
+      return null;
+    }
 
     /**
      * getCharacterBounds
      * @param value0 TODO
-     * @returns Rectangle
+     * @return Rectangle
      */
     public Rectangle getCharacterBounds(int value0)
     {
       return null; // TODO
-    } // getCharacterBounds()
+    }
 
     /**
      * getCharCount
-     * @returns int
+     * @return int
      */
     public int getCharCount()
     {
       return 0; // TODO
-    } // getCharCount()
+    }
 
     /**
      * getCharacterAttribute
      * @param value0 TODO
-     * @returns AttributeSet
+     * @return AttributeSet
      */
     public AttributeSet getCharacterAttribute(int value0)
     {
       return null; // TODO
-    } // getCharacterAttribute()
+    }
 
     /**
      * getAtIndex
      * @param value0 TODO
      * @param value1 TODO
-     * @returns String
+     * @return String
      */
     public String getAtIndex(int value0, int value1)
     {
       return null; // TODO
-    } // getAtIndex()
+    }
 
     /**
      * getAfterIndex
      * @param value0 TODO
      * @param value1 TODO
-     * @returns String
+     * @return String
      */
     public String getAfterIndex(int value0, int value1)
     {
       return null; // TODO
-    } // getAfterIndex()
+    }
 
     /**
      * getBeforeIndex
      * @param value0 TODO
      * @param value1 TODO
-     * @returns String
+     * @return String
      */
     public String getBeforeIndex(int value0, int value1)
     {
       return null; // TODO
-    } // getBeforeIndex()
-  } // AccessibleJTextComponent
+    }
+  }
 
   public static class KeyBinding
   {
@@ -285,7 +285,7 @@ public abstract class JTextComponent extends JComponent
       this.key = key;
       this.actionName = actionName;
     }
-  } // class KeyBinding
+  }
 
   private static final long serialVersionUID = -8796518220218978795L;
   
@@ -317,21 +317,28 @@ public abstract class JTextComponent extends JComponent
     return doc;
   }
 
+  /**
+   * Verify that key is a legal value for the horizontalAlignment properties.
+   */
   protected int checkHorizontalKey(int key, String message)
   {
-    //    Verify that key is a legal value for the horizontalAlignment properties. 
     return 0;
   }
 
+  /**
+   * Verify that key is a legal value for the verticalAlignment
+   * or verticalTextPosition properties.
+   */
   protected int checkVerticalKey(int key, String message)
   {
-    //      Verify that key is a legal value for the verticalAlignment or verticalTextPosition properties.  
     return 0;
   }
 
+  /**
+   * Get the AccessibleContext of this object
+   */
   public AccessibleContext getAccessibleContext()
   {
-    //          Get the AccessibleContext of this object 
     return null;
   }
 
@@ -340,21 +347,28 @@ public abstract class JTextComponent extends JComponent
     return null;
   }
 
+  /**
+   * Return the keycode that indicates a mnemonic key.
+   */
   public int getDisplayedMnemonic()
   {
-    //          Return the keycode that indicates a mnemonic key.   
     return 0;
   }
 
+  /**
+   * Returns the alignment of the label's contents along the X axis.
+   */
   public int getHorizontalAlignment()
   {
-    //          Returns the alignment of the label's contents along the X axis.   
     return 0;
   }
 
+  /**
+   * Returns the horizontal position of the label's text,
+   * relative to its image.
+   */
   public int getHorizontalTextPosition()
   {
-    //          Returns the horizontal position of the label's text, relative to its image.    
     return 0;
   }
 
@@ -368,9 +382,11 @@ public abstract class JTextComponent extends JComponent
     return icon_gap;
   }
 
+  /**
+   * Get the component this is labelling.
+   */
   Component getLabelFor()
   {
-    //          Get the component this is labelling.  
     return null;
   }
 
@@ -382,8 +398,14 @@ public abstract class JTextComponent extends JComponent
 
   public void setText(String text)
   {
-    getDocument().remove(0, doc.getLength());
-    getDocument().insertString(0, text, null);
+    try
+      {
+	getDocument().remove(0, doc.getLength());
+	getDocument().insertString(0, text, null);
+      }
+    catch (BadLocationException e)
+      {
+      }
   }
 
   public String getText()
@@ -391,85 +413,118 @@ public abstract class JTextComponent extends JComponent
     return getDocument().getText(0, getDocument().getLength());
   }
 
+  /**
+   * Returns a string that specifies the name of the l&amp;f class
+   * that renders this component.
+   *
+   * @return the string "TextComponentUI"
+   */
   public String getUIClassID()
   {
-    //          Returns a string that specifies the name of the l&f class that renders this component.  
     return "TextComponentUI";
   }
 
+  /**
+   * Returns the alignment of the label's contents along the Y axis.
+   */
   public int getVerticalAlignment()
   {
-    //          Returns the alignment of the label's contents along the Y axis. 
     return 0;
   }
 
+  /**
+   * Returns the vertical position of the label's text, relative to its image.
+   */
   public int getVerticalTextPosition()
   {
-    //          Returns the vertical position of the label's text, relative to its image. 
     return 0;
   }
 
+  /**
+   * This is overriden to return false if the current Icon's Image is not equal to the passed in Image img.
+   */
   public boolean imageUpdate(Image img, int infoflags, int x, int y, int w,
                              int h)
   {
-    //          This is overriden to return false if the current Icon's Image is not equal to the passed in Image img. 
     return (img == icon);
   }
 
+  /**
+   * Returns a string representation of this JTextComponent.
+   */
   protected String paramString()
   {
-    //          Returns a string representation of this JTextComponent.  
     return "JTextComponent";
   }
 
+  /**
+   * Set the icon to be displayed if this JTextComponent is "disabled" (JTextComponent.setEnabled(false)).
+   */
   void setDisabledIcon(Icon disabledIcon)
   {
-    //          Set the icon to be displayed if this JTextComponent is "disabled" (JTextComponent.setEnabled(false)).  
   }
 
+  /**
+   * Specifies the displayedMnemonic as a char value.
+   */
   void setDisplayedMnemonic(char aChar)
   {
-    //          Specifies the displayedMnemonic as a char value.  
   }
 
+  /**
+   * Specify a keycode that indicates a mnemonic key.
+   */
   void setDisplayedMnemonic(int key)
   {
-    //          Specify a keycode that indicates a mnemonic key.  
   }
 
+  /**
+   * Sets the alignment of the label's contents along the X axis.
+   */
   void setHorizontalAlignment(int alignment)
   {
-    //          Sets the alignment of the label's contents along the X axis.  
   }
 
+  /**
+   * Sets the horizontal position of the label's text, relative to its image.
+   */
   void setHorizontalTextPosition(int textPosition)
   {
-    //          Sets the horizontal position of the label's text, relative to its image.  
   }
 
+  /**
+   * Defines the icon this component will display.
+   */
   void setIcon(Icon icon)
   {
-    //          Defines the icon this component will display.  
   }
 
+  /**
+   * If both the icon and text properties are set, this property defines the space between them.
+   */
   public void setIconTextGap(int iconTextGap)
   {
-    //          If both the icon and text properties are set, this property defines the space between them.  
   }
 
+  /**
+   * Set the component this is labelling.
+   */
   public void setLabelFor(Component c)
   {
-    //          Set the component this is labelling.  
   }
 
+  /**
+   * Sets the alignment of the label's contents along the Y axis.
+   */
   public void setVerticalAlignment(int alignment)
   {
-    //          Sets the alignment of the label's contents along the Y axis.  
   }
 
+  /**
+   * Sets the vertical position of the label's text, relative to its image.
+   */
   public void setVerticalTextPosition(int textPosition)
   {
-    //          Sets the vertical position of the label's text, relative to its image.  
   }
 
   public TextUI getUI()
